@@ -41,7 +41,7 @@
 					<posy>571</posy>
 					<width>374</width>
 					<height>561</height>
-					<texture background="true" flipy="true" diffuse="views/posterview/diffuse-ref.png">$VAR[PosterViewPosterAlt]</texture>
+					<texture background="true" flipy="true" diffuse="views/posterview/diffuse-ref.png" fallback="special://skin/extras/moviegenres/default.jpg">$VAR[PosterViewPosterAlt]</texture>
 					<aspectratio align="center" scalediffuse="false">stretch</aspectratio>
 					<visible>!Skin.HasSetting(HideCoverReflection)</visible>
 				</control>
@@ -59,17 +59,29 @@
 					<posy>10</posy>
 					<width>374</width>
 					<height>561</height>
-					<texture background="true" diffuse="arctic/poster/classic.png">$VAR[PosterViewPosterAlt]</texture>
+					<texture background="true" diffuse="arctic/poster/classic.png" fallback="special://skin/extras/moviegenres/default.jpg">$VAR[PosterViewPosterAlt]</texture>
 					<aspectratio align="center" scalediffuse="false">stretch</aspectratio>
 				</control>
 				<control type="image">
-					<description>Watched Overlay</description>
+					<description>Overlay</description>
 					<posx>-32</posx>
 					<posy>10</posy>
 					<width>80</width>
 					<height>80</height>
 					<texture>$VAR[arctic.watched]</texture>
 					<aspectratio aligny="top" align="left">keep</aspectratio>
+					<visible>!Container.Content(genres)</visible>
+				</control>
+				<control type="label">
+					<posx>155</posx>
+					<posy>12</posy>
+					<width>300</width>
+					<label>$INFO[ListItem.Label]</label>
+					<font>Font-Alaska-S29-BL</font>
+					<textcolor>mod-infotags-alt</textcolor>
+					<scroll>false</scroll>
+					<align>center</align>
+					<visible>Container.Content(genres)</visible>
 				</control>				
 				<control type="image">
 					<description>Border</description>
@@ -105,7 +117,7 @@
 					<posy>571</posy>
 					<width>374</width>
 					<height>561</height>
-					<texture background="true" flipy="true" diffuse="views/posterview/diffuse-ref.png">$VAR[PosterViewPosterAlt]</texture>
+					<texture background="true" flipy="true" diffuse="views/posterview/diffuse-ref.png" fallback="special://skin/extras/moviegenres/default.jpg">$VAR[PosterViewPosterAlt]</texture>
 					<aspectratio align="center" scalediffuse="false">stretch</aspectratio>
 					<visible>!Skin.HasSetting(HideCoverReflection)</visible>
 				</control>
@@ -124,21 +136,29 @@
 					<posy>10</posy>
 					<width>374</width>
 					<height>561</height>
-					<texture background="true" diffuse="arctic/poster/classic.png">$VAR[PosterViewPosterAlt]</texture>
+					<texture background="true" diffuse="arctic/poster/classic.png" fallback="special://skin/extras/moviegenres/default.jpg">$VAR[PosterViewPosterAlt]</texture>
 					<aspectratio align="center" scalediffuse="false">stretch</aspectratio>
 				</control>
-				<control type="group">
+				<control type="image">
+					<description>Overlay</description>
 					<posx>-32</posx>
 					<posy>10</posy>
-					<control type="image">
-						<description>Panel</description>
-						<posx>0</posx>
-						<posy>0</posy>
-						<width>80</width>
-						<height>80</height>
-						<texture>$VAR[arctic.watched]</texture>
-						<aspectratio aligny="top" align="left">keep</aspectratio>
-					</control>
+					<width>80</width>
+					<height>80</height>
+					<texture>$VAR[arctic.watched]</texture>
+					<aspectratio aligny="top" align="left">keep</aspectratio>
+					<visible>!Container.Content(genres)</visible>
+				</control>
+				<control type="label">
+					<posx>155</posx>
+					<posy>12</posy>
+					<width>300</width>
+					<label>$INFO[ListItem.Label]</label>
+					<font>Font-Alaska-S29-BL</font>
+					<textcolor>mod-infotags-alt</textcolor>
+					<scroll>false</scroll>
+					<align>center</align>
+					<visible>Container.Content(genres)</visible>
 				</control>
 				<control type="image">
 					<description>Border</description>
@@ -172,7 +192,7 @@
 					<posy>571</posy>
 					<width>374</width>
 					<height>561</height>
-					<texture background="true" flipy="true" diffuse="views/posterview/diffuse-ref.png">$VAR[PosterViewPosterAlt]</texture>
+					<texture background="true" flipy="true" diffuse="views/posterview/diffuse-ref.png" fallback="special://skin/extras/moviegenres/default.jpg">$VAR[PosterViewPosterAlt]</texture>
 					<aspectratio align="center" scalediffuse="false">stretch</aspectratio>
 					<visible>!Skin.HasSetting(HideCoverReflection)</visible>
 				</control>
@@ -213,21 +233,29 @@
 					<posy>10</posy>
 					<width>374</width>
 					<height>561</height>
-					<texture background="true" diffuse="arctic/poster/classic.png">$VAR[PosterViewPosterAlt]</texture>
+					<texture background="true" diffuse="arctic/poster/classic.png" fallback="special://skin/extras/moviegenres/default.jpg">$VAR[PosterViewPosterAlt]</texture>
 					<aspectratio align="center" scalediffuse="false">stretch</aspectratio>
 				</control>
-				<control type="group">
+				<control type="image">
+					<description>Overlay</description>
 					<posx>-32</posx>
 					<posy>10</posy>
-					<control type="image">
-						<description>Panel</description>
-						<posx>0</posx>
-						<posy>0</posy>
-						<width>80</width>
-						<height>80</height>
-						<texture>$VAR[arctic.watched]</texture>
-						<aspectratio aligny="top" align="left">keep</aspectratio>
-					</control>
+					<width>80</width>
+					<height>80</height>
+					<texture>$VAR[arctic.watched]</texture>
+					<aspectratio aligny="top" align="left">keep</aspectratio>
+					<visible>!Container.Content(genres)</visible>
+				</control>
+				<control type="label">
+					<posx>155</posx>
+					<posy>12</posy>
+					<width>300</width>
+					<label>$INFO[ListItem.Label]</label>
+					<font>Font-Alaska-S29-BL</font>
+					<textcolor>mod-infotags-alt</textcolor>
+					<scroll>false</scroll>
+					<align>center</align>
+					<visible>Container.Content(genres)</visible>
 				</control>
 				<control type="image">
 					<description>Border</description>
@@ -266,7 +294,7 @@
 					<posy>571</posy>
 					<width>374</width>
 					<height>561</height>
-					<texture background="true" flipy="true" diffuse="views/posterview/diffuse-ref.png">$VAR[PosterViewPosterAlt]</texture>
+					<texture background="true" flipy="true" diffuse="views/posterview/diffuse-ref.png" fallback="special://skin/extras/moviegenres/default.jpg">$VAR[PosterViewPosterAlt]</texture>
 					<aspectratio align="center" scalediffuse="false">stretch</aspectratio>
 					<visible>!Skin.HasSetting(HideCoverReflection)</visible>
 				</control>
@@ -307,21 +335,29 @@
 					<posy>10</posy>
 					<width>374</width>
 					<height>561</height>
-					<texture background="true" diffuse="arctic/poster/classic.png">$VAR[PosterViewPosterAlt]</texture>
+					<texture background="true" diffuse="arctic/poster/classic.png" fallback="special://skin/extras/moviegenres/default.jpg">$VAR[PosterViewPosterAlt]</texture>
 					<aspectratio align="center" scalediffuse="false">stretch</aspectratio>
 				</control>
-				<control type="group">
+				<control type="image">
+					<description>Overlay</description>
 					<posx>-32</posx>
 					<posy>10</posy>
-					<control type="image">
-						<description>Panel</description>
-						<posx>0</posx>
-						<posy>0</posy>
-						<width>80</width>
-						<height>80</height>
-						<texture>$VAR[arctic.watched]</texture>
-						<aspectratio aligny="top" align="left">keep</aspectratio>
-					</control>
+					<width>80</width>
+					<height>80</height>
+					<texture>$VAR[arctic.watched]</texture>
+					<aspectratio aligny="top" align="left">keep</aspectratio>
+					<visible>!Container.Content(genres)</visible>
+				</control>
+				<control type="label">
+					<posx>155</posx>
+					<posy>12</posy>
+					<width>300</width>
+					<label>$INFO[ListItem.Label]</label>
+					<font>Font-Alaska-S29-BL</font>
+					<textcolor>mod-infotags-alt</textcolor>
+					<scroll>false</scroll>
+					<align>center</align>
+					<visible>Container.Content(genres)</visible>
 				</control>
 				<control type="image">
 					<description>Border</description>
