@@ -35,7 +35,7 @@
                             <posy>5</posy>
                             <width>237</width>
                             <height>355</height>
-                            <texture background="true" diffuse="arctic/poster/wall.png">$VAR[WallPoster]</texture>
+                            <texture background="true" diffuse="arctic/poster/wall.png" fallback="special://skin/extras/moviegenres/default.jpg">$VAR[PosterViewPosterAlt]</texture>
                             <colordiffuse>ffcccccc</colordiffuse>
                             <aspectratio>stretch</aspectratio>
                         </control>
@@ -75,7 +75,7 @@
                     </itemlayout>
                     <focusedlayout width="247" height="365">
 						<control type="group">
-							<visible>!Skin.HasSetting(hide.posterwallinfo) + [Container(61).Column(0) | Container(61).Column(1) | Container(61).Column(2) | Container(61).Column(3)]</visible>
+							<visible>!Container.Content(genres) + !Skin.HasSetting(hide.posterwallinfo) + [Container(61).Column(0) | Container(61).Column(1) | Container(61).Column(2) | Container(61).Column(3)]</visible>
 							<animation effect="fade" end="0" start="100" time="0" delay="0" condition="[Container(61).OnNext | Container(61).OnPrevious]">UnFocus</animation>
 							<animation effect="fade" start="0" end="100" time="250" delay="1800">Focus</animation>
 							<posx>269</posx>
@@ -137,7 +137,7 @@
 							</control>
 						</control>
 						<control type="group">
-							<visible>!Skin.HasSetting(hide.posterwallinfo) + ![Container(61).Column(0) | Container(61).Column(1) | Container(61).Column(2) | Container(61).Column(3)]</visible>
+							<visible>!Container.Content(genres) + !Skin.HasSetting(hide.posterwallinfo) + ![Container(61).Column(0) | Container(61).Column(1) | Container(61).Column(2) | Container(61).Column(3)]</visible>
 							<animation effect="fade" end="0" start="100" time="0" delay="0" condition="[Container(61).OnNext | Container(61).OnPrevious]">UnFocus</animation>
 							<animation effect="fade" start="0" end="100" time="250" delay="1800">Focus</animation>
 							<posx>-723</posx>
@@ -210,7 +210,7 @@
 								<posy>5</posy>
 								<width>237</width>
 								<height>355</height>
-								<texture background="true" diffuse="arctic/poster/wall.png">$VAR[WallPoster]</texture>
+								<texture background="true" diffuse="arctic/poster/wall.png" fallback="special://skin/extras/moviegenres/default.jpg">$VAR[PosterViewPosterAlt]</texture>
 								<aspectratio>stretch</aspectratio>
 							</control>
 							<control type="group">
